--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "softlofy-rn-components": "^1.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
